--- a/PRODIGY_WD_02/stopwatch.html
+++ b/PRODIGY_WD_02/stopwatch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stop-Watch Web Applicaton</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stopwatch.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
             <button class="btn-reset">Reset</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="stopwatch.js"></script>
 </body>
 </html>
