made some changes

--- a/PRODIGY_WD_04/portfolio.html
+++ b/PRODIGY_WD_04/portfolio.html
@@ -11,20 +11,20 @@
     <div class="main_container">
         <header>
             <div class="logo">MySite</div>
-            <div class="nav_links">
+            <nav class="nav_links">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Skills</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">Achievments</a></li>
+                    <li><a href="#">Certificates</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </div>
+            </nav>
         </header>
 
         <main>
-            <div class="home_container">
+            <div class="home_container" id="home">
                 <img src="" alt="face-image">
                 <h2>Hey There!</h2>
                 <h1>I'm <b>RASHMI GANGWAR</b></h1>
@@ -32,7 +32,7 @@
                 <h3>MERN Stack Developer || Frontend Developer || Web Developer</h3>
             </div>
         
-            <div class="about_container">
+            <div class="about_container" id="about">
                 <h3>About</h3>
                 <p>Here's a little bit about me...</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, quis. Molestiae eius aliquam veritatis nemo.</p>
@@ -64,26 +64,27 @@
 
             <hr>
 
-            <div class="skills_container">
+            <div class="skills_container" id="skills">
                 <h3>Skills</h3>
                 <div class="skills_div_1">
                     <div class="box_1">
                         <i class="fa-brands fa-html5"></i>
-                        <h4>HTML</h4>
+                        <h4>HTML5</h4>
                         <p>Stand for HyperText Markup Language is a standard language used to create and  structure web pages using elements link headings , links , images and forms.</p>
                     </div>
                     <div class="box_1">
                         <i class="fa-brands fa-css3-alt"></i>
-                        <h4>CSS</h4>
+                        <h4>CSS3</h4>
                         <p>Stand for Cascading Style Sheet is a stylesheet language used to design web pages by controlling layouts , fonts , colors and responsive across different screens.</p>
                     </div>
                     <div class="box_1">
                         <i class="fa-brands fa-square-js"></i>
                         <h4>JS</h4>
-                        <p>JavaScript (JS) is a versatile, high-level programming language used for creating dynamic web content, enabling interactivity, animations, and real-time updates in web applications.</p>
+                        <p>JavaScript (JS) is a high-level programming language used for creating dynamic web content, enabling interactivity, animations in web applications.</p>
                     </div>
                 </div>
-                <div class="skills_div_2">
+                <br>
+                <div class="skills_div_1">
                     <div class="box_1">
                         <i class="fa-brands fa-react"></i><i class="fa-brands fa-node-js"></i>
                         <h4>MERN Stack</h4>
@@ -97,14 +98,14 @@
                 </div>
             </div>
 
-            <div class="Project_container">
+            <div class="Project_container" id="projects">
                 <div class="project_box_1">
                     <h3>Projects</h3>
                     <img src="" alt="project">
                 </div>
                 <div class="project_box_2">
                     <div class="detail">
-                        <p>Project which i made it are listed below.</p>
+                        <p>Projects which i made are listed below.</p>
                         <p>My main Project is <b>Physio-Therapist Website</b> which contain clinic details, services like pain management and rehabilitation, patient feedback, and therapist profiles. It must feature appointment booking, contact details, testimonials, and a blog with health tips. A user-friendly, responsive design ensures seamless navigation, helping clients understand treatments and book consultations easily.</p>
                     </div>
                     <div class="checkbox">
@@ -142,7 +143,7 @@
                 </div>
             </div>
 
-            <div class="certificate_container">
+            <div class="certificate_container" id="certificates">
                 <h3>Certificates</h3>
                 <p>For the <b> Certificates </b>just click on the <b> Link </b>below.</p>
                 <i class="fa-brands fa-linkedin"></i><a href="">Linkedln</a>
@@ -173,7 +174,7 @@
             </div>
         </footer>
 
-        <footer></footer>
+        <script src="portfolio.js"></script>
     </div>
 </body>
 </html>
